--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   youtube_api: ^1.0.4
   easy_debounce: ^2.0.3
-  flutter_ffmpeg: ^0.4.1
-  flutter_downloader: ^1.6.1
   path_provider: ^2.0.15
+  open_file: ^3.3.2
+  dio: ^5.2.1+1
+  flutter_downloader: ^1.10.5
+  file_picker: ^5.3.2
+  permission_handler: ^10.4.2
+  youtube_explode_dart: ^1.12.4
+
  
 dev_dependencies:
   flutter_test:
