--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^5.3.2
   permission_handler: ^10.4.2
   youtube_explode_dart: ^1.12.4
+  external_path: ^1.0.3
 
  
 dev_dependencies:
