--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   permission_handler: ^10.4.2
   youtube_explode_dart: ^1.12.4
   external_path: ^1.0.3
+  audioplayers: ^4.1.0
 
  
 dev_dependencies:
