--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   external_path: ^1.0.3
   audioplayers: ^4.1.0
   flutter_riverpod: ^2.3.6
+  background_downloader: ^7.5.0
  
 dev_dependencies:
   flutter_test:
